test/classes/initializers/generics/phase1/param-from-new.good
param-from-new.chpl:11: error: Cannot initialize param field 't' with 'new' expression
